Fix More Btn section mobile view

--- a/style.css
+++ b/style.css
@@ -182,6 +182,17 @@ body {
   margin-left: auto;
 }
 
+.more-btn {
+  color: grey;
+  border: grey solid 1.1px;
+  background: white;
+  width: 337.3px;
+  border-radius: 3px;
+}
+
+.more-btn i {
+  color: #fa4f40;
+}
 
 
 @media screen and (min-width: 768px) {
